tests/baselines/reference/instanceMemberInitialization.errors.txt
instanceMemberInitialization.ts(16,39): error TS2729: Property 'Map_' is used before its initialization.


==== instanceMemberInitialization.ts (1 errors) ====
    class C {
        x = 1;
    }
    
    var c = new C();
    c.x = 3;
    var c2 = new C();
    var r = c.x === c2.x;
    
    // #31792
    
    
    
    class MyMap<K, V> {
        constructor(private readonly Map_: { new<K, V>(): any }) {}
        private readonly store = new this.Map_<K, V>();
                                          ~~~~
!!! error TS2729: Property 'Map_' is used before its initialization.
!!! related TS2728 instanceMemberInitialization.ts:15:17: 'Map_' is declared here.
    }